--- a/src/app/tools/teambuilder/teambuilder.component.html
+++ b/src/app/tools/teambuilder/teambuilder.component.html
@@ -1,4 +1,4 @@
-Teambuilder
+<!-- Teambuilder
 <div class="flex p-2">
   <select-search
     [items]="names"
@@ -9,4 +9,4 @@ Teambuilder
 </div>
 @for (pokemon of team; track $index) {
   <teambuilder-pokemon [pokemon]="pokemon"></teambuilder-pokemon>
-}
+} -->
