--- a/src/app/util/dropdowns/select/select-no-search.component.html
+++ b/src/app/util/dropdowns/select/select-no-search.component.html
@@ -30,7 +30,7 @@
           *cdkVirtualFor="let item of items"
           class="mx-1 rounded py-0.5 flex justify-between px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
-            'bg-menu-200': selectedItem && selectedItem.value === item.value,
+            'bg-menu-200': selectedItem && selectedItem.name === item.name,
           }"
           (click)="selectItem(item)"
         >
@@ -61,7 +61,7 @@
           *cdkVirtualFor="let item of items"
           class="mx-2 rounded py-0.5 px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
-            'bg-menu-200': selectedItem && selectedItem.value === item.value,
+            'bg-menu-200': selectedItem && selectedItem.name === item.name,
           }"
           (click)="selectItem(item)"
         >
